// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ProgressBar /> Check how renders should render everything correctly for currentStep 1 and stepsNumber 3 1`] = `
<DocumentFragment>
  <div
    class="sc-bdfBwQ bNVJGe"
  >
    <div
      class="step-box active"
    >
      <span
        class="sc-hKgILt PAkZJ"
        color=""
        display="inline-block"
        overflow="visible"
        size="3"
        spacing="0px"
        transform=""
      >
        <div
          class="sc-gsTCUz hZJlLD"
          data-testid="ProgressBar-step-box-checkmark-hidden"
        >
          <div
            class="sc-dlfnbm iObWpB"
            color="#000"
          >
            <svg>
              check-mark.svg
            </svg>
          </div>
        </div>
        <div
          class="sc-gsTCUz ClOiW"
          data-testid="ProgressBar-step-box-number-visible"
        >
          1
        </div>
      </span>
    </div>
    <div
      class="step-line"
    >
      <div
        class="step-line-fill"
      />
    </div>
    <div
      class="step-box"
    >
      <span
        class="sc-hKgILt PAkZJ"
        color=""
        display="inline-block"
        overflow="visible"
        size="3"
        spacing="0px"
        transform=""
      >
        <div
          class="sc-gsTCUz hZJlLD"
          data-testid="ProgressBar-step-box-checkmark-hidden"
        >
          <div
            class="sc-dlfnbm iObWpB"
            color="#000"
          >
            <svg>
              check-mark.svg
            </svg>
          </div>
        </div>
        <div
          class="sc-gsTCUz ClOiW"
          data-testid="ProgressBar-step-box-number-visible"
        >
          2
        </div>
      </span>
    </div>
    <div
      class="step-line"
    >
      <div
        class="step-line-fill"
      />
    </div>
    <div
      class="step-box"
    >
      <span
        class="sc-hKgILt PAkZJ"
        color=""
        display="inline-block"
        overflow="visible"
        size="3"
        spacing="0px"
        transform=""
      >
        <div
          class="sc-gsTCUz hZJlLD"
          data-testid="ProgressBar-step-box-checkmark-hidden"
        >
          <div
            class="sc-dlfnbm iObWpB"
            color="#000"
          >
            <svg>
              check-mark.svg
            </svg>
          </div>
        </div>
        <div
          class="sc-gsTCUz ClOiW"
          data-testid="ProgressBar-step-box-number-visible"
        >
          3
        </div>
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`<ProgressBar /> Check how renders should render everything correctly for currentStep 2 and stepsNumber 3 1`] = `
<DocumentFragment>
  <div
    class="sc-bdfBwQ bNVJGe"
  >
    <div
      class="step-box active"
    >
      <span
        class="sc-hKgILt PAkZJ"
        color=""
        display="inline-block"
        overflow="visible"
        size="3"
        spacing="0px"
        transform=""
      >
        <div
          class="sc-gsTCUz ClOiW"
          data-testid="ProgressBar-step-box-checkmark-visible"
        >
          <div
            class="sc-dlfnbm iObWpB"
            color="#000"
          >
            <svg>
              check-mark.svg
            </svg>
          </div>
        </div>
        <div
          class="sc-gsTCUz hZJlLD"
          data-testid="ProgressBar-step-box-number-hidden"
        >
          1
        </div>
      </span>
    </div>
    <div
      class="step-line"
    >
      <div
        class="step-line-fill active"
      />
    </div>
    <div
      class="step-box active"
    >
      <span
        class="sc-hKgILt PAkZJ"
        color=""
        display="inline-block"
        overflow="visible"
        size="3"
        spacing="0px"
        transform=""
      >
        <div
          class="sc-gsTCUz hZJlLD"
          data-testid="ProgressBar-step-box-checkmark-hidden"
        >
          <div
            class="sc-dlfnbm iObWpB"
            color="#000"
          >
            <svg>
              check-mark.svg
            </svg>
          </div>
        </div>
        <div
          class="sc-gsTCUz ClOiW"
          data-testid="ProgressBar-step-box-number-visible"
        >
          2
        </div>
      </span>
    </div>
    <div
      class="step-line"
    >
      <div
        class="step-line-fill"
      />
    </div>
    <div
      class="step-box"
    >
      <span
        class="sc-hKgILt PAkZJ"
        color=""
        display="inline-block"
        overflow="visible"
        size="3"
        spacing="0px"
        transform=""
      >
        <div
          class="sc-gsTCUz hZJlLD"
          data-testid="ProgressBar-step-box-checkmark-hidden"
        >
          <div
            class="sc-dlfnbm iObWpB"
            color="#000"
          >
            <svg>
              check-mark.svg
            </svg>
          </div>
        </div>
        <div
          class="sc-gsTCUz ClOiW"
          data-testid="ProgressBar-step-box-number-visible"
        >
          3
        </div>
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`<ProgressBar /> Check how renders should render everything correctly for currentStep 3 and stepsNumber 3 1`] = `
<DocumentFragment>
  <div
    class="sc-bdfBwQ bNVJGe"
  >
    <div
      class="step-box active"
    >
      <span
        class="sc-hKgILt PAkZJ"
        color=""
        display="inline-block"
        overflow="visible"
        size="3"
        spacing="0px"
        transform=""
      >
        <div
          class="sc-gsTCUz ClOiW"
          data-testid="ProgressBar-step-box-checkmark-visible"
        >
          <div
            class="sc-dlfnbm iObWpB"
            color="#000"
          >
            <svg>
              check-mark.svg
            </svg>
          </div>
        </div>
        <div
          class="sc-gsTCUz hZJlLD"
          data-testid="ProgressBar-step-box-number-hidden"
        >
          1
        </div>
      </span>
    </div>
    <div
      class="step-line"
    >
      <div
        class="step-line-fill active"
      />
    </div>
    <div
      class="step-box active"
    >
      <span
        class="sc-hKgILt PAkZJ"
        color=""
        display="inline-block"
        overflow="visible"
        size="3"
        spacing="0px"
        transform=""
      >
        <div
          class="sc-gsTCUz ClOiW"
          data-testid="ProgressBar-step-box-checkmark-visible"
        >
          <div
            class="sc-dlfnbm iObWpB"
            color="#000"
          >
            <svg>
              check-mark.svg
            </svg>
          </div>
        </div>
        <div
          class="sc-gsTCUz hZJlLD"
          data-testid="ProgressBar-step-box-number-hidden"
        >
          2
        </div>
      </span>
    </div>
    <div
      class="step-line"
    >
      <div
        class="step-line-fill active"
      />
    </div>
    <div
      class="step-box active"
    >
      <span
        class="sc-hKgILt PAkZJ"
        color=""
        display="inline-block"
        overflow="visible"
        size="3"
        spacing="0px"
        transform=""
      >
        <div
          class="sc-gsTCUz hZJlLD"
          data-testid="ProgressBar-step-box-checkmark-hidden"
        >
          <div
            class="sc-dlfnbm iObWpB"
            color="#000"
          >
            <svg>
              check-mark.svg
            </svg>
          </div>
        </div>
        <div
          class="sc-gsTCUz ClOiW"
          data-testid="ProgressBar-step-box-number-visible"
        >
          3
        </div>
      </span>
    </div>
  </div>
</DocumentFragment>
`;
